# lintem

./: .gitignore  .ruff.toml  README.md  pyproject.toml  reset.py
src/lintem/: agent.py  bad.py  main.py
